--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "lerna-semantic-release": "^1.0.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "minilog": "^3.0.0",
     "minimist": "1.2.0",
     "mocha": "^2.4.5",
     "precommit-hook": "^3.0.0",
+    "protractor-cucumber": "^0.1.8",
     "raw-loader": "^0.5.1",
     "semantic-release": "6.2.2",
     "skatejs-named-slots": "^0.2.0",
     "style-loader": "^0.13.1",
     "validate-commit-message": "^3.0.1",
+    "wait-on": "^1.5.2",
     "webcomponents.js": "^0.7.22",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
@@ -77,7 +80,7 @@
     "dev/single": "./build/bin/dev.single.sh",
     "dist": "./node_modules/.bin/lerna run prepublish",
     "lint": "eslint .",
-    "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
+    "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg && webdriver-manager update",
     "prepublish/single": "./build/bin/prepublish.single.sh",
     "release": "lerna-semantic-release pre && lerna-semantic-release perform",
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
@@ -86,6 +89,7 @@
     "test/saucelabs": "./build/bin/test.saucelabs.sh",
     "test/saucelabs/ci": "./build/bin/test.saucelabs.ci.sh",
     "test/single": "./build/bin/test.single.sh",
+    "test/single/integration": "./build/bin/test.single.integration.sh",
     "test/single/monkey": "./build/bin/test.single.monkey.sh",
     "test/single/saucelabs": "./build/bin/test.single.saucelabs.sh",
     "test/single/watch": "./build/bin/test.single.watch.sh",
