--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "akutil-shared-styles": "*",
     "akutil-common": "*",
-    "skatejs": "^1.0.4",
+    "skatejs": "1.x",
     "ak-layer": "^56.4.0",
     "classnames": "^2.2.5",
     "keycode": "^2.1.2"
