--- a/packages/ak-editor-footer/package.json
+++ b/packages/ak-editor-footer/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "^1.0.0"
   },
   "devDependencies": {
     "akutil-shared-styles": "^33.1.0",
