--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "storybook/single": "./build/bin/storybook.single.sh",
     "storybook/static": "build-storybook -c ./build/storybook",
     "storybook/static/single": "./build/bin/storybook.static.single.sh",
+    "storybook/static/registry":"./node_modules/.bin/lerna exec -- ../../build/bin/storybook.static.registry.sh",
     "test": "./node_modules/.bin/lerna exec -- ../../build/bin/test.sh --reporters=dots",
     "test/ci": "./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/test.sh --no-auto-watch --reporters=dots",
     "test/pipelines-branch": "BRANCH_BUILD=1 CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD) ./build/bin/test.pipelines.js",
