--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-import-resolver-webpack": "^0.5.1",
     "eslint-plugin-import": "^1.11.0",
     "file-loader": "^0.9.0",
+    "glob": "^7.0.5",
     "jsdoc-to-markdown": "^1.3.6",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
@@ -47,7 +48,7 @@
     "karma-mocha": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
-    "lerna": "2.0.0-beta.24",
+    "lerna": "^2.0.0-beta.26",
     "lerna-semantic-release": "^7.0.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -72,8 +73,7 @@
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "glob": "^7.0.5"
+    "webpack-dev-server": "^1.14.1"
   },
   "engines": {
     "npm": ">=3.8",
@@ -120,7 +120,7 @@
     "storybook/single": "./build/bin/storybook.single.sh",
     "storybook/static": "build-storybook -c ./build/storybook",
     "storybook/static/single": "./build/bin/storybook.static.single.sh",
-    "storybook/static/registry":"rm -rf ./stories && ./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/storybook.static.registry.sh",
+    "storybook/static/registry": "rm -rf ./stories && ./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/storybook.static.registry.sh",
     "test": "./node_modules/.bin/lerna exec -- ../../build/bin/test.sh --reporters=dots",
     "test/ci": "./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/test.sh --no-auto-watch --reporters=dots",
     "test/browserstack": "./build/bin/test.browserstack.sh",
