--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,4 +27,7 @@ pipelines:
           - npm config set progress false
           - ./build/bin/setup_hosts.sh
           - npm install
-          - npm run release/registry
+          - npm run validate/package.json
+          - npm run lint
+          - npm run dist
+          - npm run test/browserstack/ci
