--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "akutil-common-test": "^1.3.0",
     "akutil-react": "^1.0.0",
-    "custom-event-polyfill": "0.2.2",
+    "custom-event-polyfill": "^0.3.0",
     "object-assign": "^4.1.0"
   },
   "repository": {
