--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -24,6 +24,7 @@
     "web-animations-js": "^2.2.1"
   },
   "devDependencies": {
+    "akutil-common-test": "^1.0.0",
     "akutil-react": "^1.0.0",
     "custom-event-polyfill": "^0.3.0"
   },
