--- a/packages/ak-button-group/package.json
+++ b/packages/ak-button-group/package.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.2.4"
+    "skatejs": "^1.2.5"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
