--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "akutil-react": "^1.0.0",
     "custom-event-polyfill": "^0.3.0",
-    "ak-avatar": "^2.0.1"
+    "ak-avatar": "^2.0.1",
+    "akutil-common-test": "^1.5.0"
   },
   "repository": {
     "type": "git",
