--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -11,6 +11,7 @@
     "dist"
   ],
   "dependencies": {
+    "ak-icon": "^1.6.0",
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
     "debounce": "^1.0.0",
