--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {
     "ak-icon": "^1.6.0",
-    "akutil-shared-styles": "*",
+    "akutil-shared-styles": "^33.7.0",
     "classnames": "^2.2.5",
     "debounce": "^1.0.0",
     "keycode": "^2.1.4",
