--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -19,6 +19,7 @@
     "ak-editor-content": "^2.0.1",
     "ak-editor-footer": "^1.0.0",
     "ak-editor-hyperlink-edit": "^1.0.0",
+    "ak-editor-prosemirror": "^1.0.0",
     "ak-editor-toolbar": "^2.0.2",
     "ak-editor-toolbar-block-type": "^1.0.0",
     "ak-editor-toolbar-hyperlink": "^1.0.0",
@@ -34,7 +35,6 @@
     "browserkeymap": "^2.0.1",
     "lodash.invert": "^4.2.0",
     "markdown-it": "^7.0.0",
-    "prosemirror": "https://github.com/atlassian/prosemirror#b674f90ee7931d7a467992bbc961ce4626cd63c4",
     "skatejs": "^1.2.4"
   },
   "devDependencies": {
