--- a/packages/ak-editor-hyperlink-edit/package.json
+++ b/packages/ak-editor-hyperlink-edit/package.json
@@ -26,8 +26,8 @@
   },
   "devDependencies": {
     "ak-editor-content": "^2.0.0",
-    "akutil-react": "^1.0.0",
-    "prosemirror": "^0.10.0"
+    "ak-editor-prosemirror": "^1.0.0",
+    "akutil-react": "^1.0.0"
   },
   "repository": {
     "type": "git",
