--- a/packages/ak-editor-plugin-lists/package.json
+++ b/packages/ak-editor-plugin-lists/package.json
@@ -13,7 +13,8 @@
     "dist"
   ],
   "dependencies": {
-    "prosemirror": "^0.10.0"
+    "ak-editor-prosemirror": "^1.0.0",
+    "browserkeymap": "^1.0.1"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
