--- a/packages/ak-editor-plugin-markdown-inputrules/package.json
+++ b/packages/ak-editor-plugin-markdown-inputrules/package.json
@@ -13,7 +13,7 @@
     "dist"
   ],
   "dependencies": {
-    "prosemirror": "^0.10.0"
+    "ak-editor-prosemirror": "^1.0.0"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
