--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -23,12 +23,12 @@
     "skatejs": "^1.2.4"
   },
   "devDependencies": {
-    "akutil-react": "^1.0.0",
-    "ak-editor-toolbar": "^2.0.0",
     "ak-editor-content": "^2.0.0",
+    "ak-editor-prosemirror": "^1.0.0",
+    "ak-editor-toolbar": "^2.0.0",
+    "akutil-react": "^1.0.0",
     "atlassian-editorkit-block-type-plugin": "0.0.7",
-    "lodash.invert": "^4.2.0",
-    "prosemirror": "^0.9.1"
+    "lodash.invert": "^4.2.0"
   },
   "repository": {
     "type": "git",
