--- a/packages/ak-editor-toolbar/package.json
+++ b/packages/ak-editor-toolbar/package.json
@@ -15,6 +15,7 @@
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
+    "ak-editor-prosemirror": "^1.0.0",
     "akutil-shared-styles": "^33.1.0",
     "babel-runtime": "^6.11.6",
     "skatejs": "^1.2.4"
@@ -24,8 +25,7 @@
     "ak-editor-button": "*",
     "ak-editor-content": "^2.0.0",
     "ak-editor-icon": "*",
-    "ak-editor-toolbar-text-formatting": "*",
-    "prosemirror": "0.8.3"
+    "ak-editor-toolbar-text-formatting": "*"
   },
   "repository": {
     "type": "git",
