--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/bundle.js",
   "webpack": "dist/bundle-cjs.js",
-  "ak:webpack:raw": "src/index.js",
+  "ak:webpack:raw": "src/index.tsx",
+  "typings": "src/index.tsx",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket",
     "pre-release": "lerna-semantic-release pre"
