--- a/packages/ak-page/package.json
+++ b/packages/ak-page/package.json
@@ -12,15 +12,18 @@
     "dist"
   ],
   "dependencies": {
-    "ak-navigation": "^2.4.1",
     "akutil-shared-styles": "^33.0.2",
     "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "skatejs": "^1.2.5"
   },
+  "peerDependencies": {
+    "ak-navigation": "^2.0.0"
+  },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
+    "ak-navigation": "^2.4.1",
     "akutil-react": "^1.0.0"
   },
   "repository": {
