--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -24,10 +24,10 @@
   },
   "devDependencies": {
     "ak-editor-content": "^2.0.0",
+    "ak-editor-plugin-block-type": "^1.0.0",
     "ak-editor-prosemirror": "^1.0.0",
     "ak-editor-toolbar": "^2.0.0",
     "akutil-react": "^1.0.0",
-    "atlassian-editorkit-block-type-plugin": "0.0.7",
     "lodash.invert": "^4.2.0"
   },
   "repository": {
