--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ak-tag",
   "version": "1.0.0",
-  "ak:link": true,
   "description": "ak-tag webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.js",
+  "webpack": "dist/bundle-cjs.js",
+  "ak:webpack:raw": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-tag"
   },
