--- a/packages/ak-editor-plugin-mentions/package.json
+++ b/packages/ak-editor-plugin-mentions/package.json
@@ -18,7 +18,8 @@
     "ak-editor-prosemirror": "^1.0.0"
   },
   "devDependencies": {
-    "ak-editor-test": "^1.0.0"
+    "ak-editor-test": "^1.0.0",
+    "ak-editor-schema": "^1.0.0"
   },
   "repository": {
     "type": "git",
