--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -13,9 +13,11 @@
     "dist"
   ],
   "dependencies": {
+    "akutil-common": "^2.0.0",
     "akutil-shared-styles": "^33.8.0",
     "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
+    "create-error": "^0.3.1",
     "skatejs": "^1.2.5"
   },
   "author": "Atlassian Pty Ltd",
