--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -19,6 +19,7 @@
     "keycode": "^2.1.2"
   },
   "devDependencies": {
+    "akutil-common-test": "^1.5.1",
     "custom-event-polyfill": "^0.3.0"
   },
   "repository": {
