--- a/packages/ak-tag-group/package.json
+++ b/packages/ak-tag-group/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "ak-tag": "^1.0.0",
     "akutil-common-test": "^1.0.0",
-    "akutil-react": "^1.0.0"
+    "akutil-react": "^1.0.0",
+    "lodash.sample": "^4.2.1",
+    "lodash.uniq": "^4.5.0"
   },
   "peerDependencies": {
     "ak-tag": "^1.0.0"
