--- a/packages/ak-editor-prosemirror/package.json
+++ b/packages/ak-editor-prosemirror/package.json
@@ -15,7 +15,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
-    "prosemirror": "^0.10.0"
+    "prosemirror": "https://github.com/atlassian/prosemirror#0419e93d81fab481ed8a69b59615cd2458553d13"
   },
   "peerDependencies": {
     "browserkeymap": "*"
