--- a/packages/ak-editor-plugin-mentions/package.json
+++ b/packages/ak-editor-plugin-mentions/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "ak-editor-test": "^2.0.0",
-    "ak-editor-schema": "*"
+    "ak-editor-schema": "^2.0.0"
   },
   "repository": {
     "type": "git",
