--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -17,6 +17,7 @@
     "babel-runtime": "^6.11.6",
     "classnames": "^2.2.5",
     "create-error": "^0.3.1",
+    "debug": "^2.2.0",
     "skatejs": "^1.2.5"
   },
   "author": "Atlassian Pty Ltd",
