--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -24,7 +24,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "akutil-common-test": "^1.0.0",
-    "akutil-react": "^1.0.0"
+    "akutil-react": "^1.0.0",
+    "uid": "0.0.2"
   },
   "repository": {
     "type": "git",
