--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "storybook/static": "build-storybook -c ./build/storybook",
     "storybook/static/single": "./build/bin/storybook.static.single.sh",
     "storybook/static/registry": "rm -rf ./stories && ./node_modules/.bin/lerna exec --concurrency=1 -- ../../build/bin/storybook.static.registry.sh",
-    "test": "karma start ./build/karma/base.js --single-run --no-auto-watch --reporters=dots",
+    "test": "karma start ./build/karma/all.js --single-run --no-auto-watch --reporters=dots",
     "test/base": "mocha",
     "test/browserstack": "./build/bin/test.browserstack.sh",
     "test/browserstack/ci": "./build/bin/test.browserstack.ci.sh",
