--- a/packages/ak-editor-schema/package.json
+++ b/packages/ak-editor-schema/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "ak-editor-prosemirror": "^2.0.0"
   },
+  "devDependencies": {
+    "ak-editor-test": "^2.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://bitbucket.org/atlassian/atlaskit"
