--- a/packages/ak-tag/package.json
+++ b/packages/ak-tag/package.json
@@ -27,7 +27,7 @@
     "akutil-react": "^1.0.0",
     "custom-event-polyfill": "^0.3.0",
     "keycode": "^2.1.4",
-    "uid": "0.0.2"
+    "uid": "^0.0.2"
   },
   "repository": {
     "type": "git",
