--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lerna-semantic-release": "^8.0.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "marky-markdown": "^8.1.0",
     "minilog": "^3.0.1",
     "mocha": "^3.0.1",
     "package-json-validator": "^0.6.1",
@@ -115,6 +116,7 @@
     "postinstall": "./build/bin/postinstall.sh",
     "preinstall": "./build/bin/preinstall.sh",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' . --ext .js,.jsx",
+    "pr/docs": "./build/bin/generate.readme.html.pr.sh",
     "pr/storybook": "./build/bin/storybook.static.pr.sh",
     "prepublish/single": "./build/bin/prepublish.single.sh",
     "prune": "./node_modules/.bin/lerna exec -- npm prune && npm prune",
