--- a/packages/ak-icon/package.json
+++ b/packages/ak-icon/package.json
@@ -21,9 +21,10 @@
     "uid": "^0.0.2"
   },
   "devDependencies": {
+    "akutil-react": "^1.0.0",
     "idomizer": "^0.5.2",
-    "loader-utils": "^0.2.15",
-    "akutil-react": "^1.0.0"
+    "img-loader": "^1.3.1",
+    "loader-utils": "^0.2.15"
   },
   "repository": {
     "type": "git",
