--- a/packages/ak-icon/package.json
+++ b/packages/ak-icon/package.json
@@ -1,10 +1,7 @@
 {
   "name": "ak-icon",
   "version": "1.15.0",
-  "description": "",
-  "main": "dist/bundle.js",
-  "webpack": "dist/bundle-cjs.js",
-  "ak:webpack:raw": "src/index.js",
+  "description": "Icon web components",
   "scripts": {
     "gen-js": "node ./bin/generate-icon-exports.js",
     "prepublish": "npm run gen-js && cd ../.. && npm run prepublish/single ak-icon",
